syntax = "proto3";
package main;

message SignPlace {
  double latitude = 1;
  double longitude = 2;
}
